--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/netinfo": "9.3.7",
     "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "@react-navigation/stack": "^6.3.20",
@@ -21,6 +22,7 @@
     "expo-camera": "~13.2.1",
     "expo-device": "~5.2.1",
     "expo-image-picker": "~14.1.1",
+    "expo-linear-gradient": "~12.1.2",
     "expo-localization": "~14.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
@@ -37,6 +39,8 @@
     "react-native-screen": "^1.0.1",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
+    "react-native-svg-transformer": "^1.3.0",
+    "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.18.11",
     "react-redux": "^8.0.2",
     "redux-persist": "^6.0.0"
@@ -46,10 +50,17 @@
     "@types/react": "~18.0.27",
     "@types/react-native": "~0.69.1",
     "@types/react-native-onboarding-swiper": "^1.1.7",
+    "@types/react-native-vector-icons": "^6.4.18",
     "babel-plugin-module-resolver": "^4.1.0",
-    "prettier": "^3.1.1",
-    "react-native-svg-transformer": "^1.2.0",
-    "typescript": "^4.9.4"
+    "react-native-svg-transformer": "^1.3.0",
+    "typescript": "^4.9.4",
+    "prettier": "^3.1.1"
+  },
+  "ios": {
+    "supportsTablet": true
+  },
+  "android": {
+    "package": "com.homiracle"
   },
   "private": true
 }
