--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@react-navigation/native-stack": "^6.9.0",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^1.8.5",
-    "expo": "^48.0.0",
+    "expo": "^50.0.8",
     "expo-camera": "~13.2.1",
     "expo-device": "~5.2.1",
     "expo-image-picker": "~14.1.1",
@@ -52,9 +52,9 @@
     "@types/react-native-onboarding-swiper": "^1.1.7",
     "@types/react-native-vector-icons": "^6.4.18",
     "babel-plugin-module-resolver": "^4.1.0",
+    "prettier": "^3.1.1",
     "react-native-svg-transformer": "^1.3.0",
-    "typescript": "^4.9.4",
-    "prettier": "^3.1.1"
+    "typescript": "^4.9.4"
   },
   "ios": {
     "supportsTablet": true
