--- a/package.json
+++ b/package.json
@@ -10,52 +10,54 @@
     "format": "prettier --write \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-native-community/netinfo": "9.3.7",
+    "@expo/metro-config": "~0.10.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/netinfo": "9.3.10",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^1.8.5",
-    "expo": "^48.0.0",
-    "expo-camera": "~13.2.1",
-    "expo-device": "~5.2.1",
-    "expo-image-picker": "~14.1.1",
-    "expo-linear-gradient": "~12.1.2",
-    "expo-localization": "~14.1.1",
-    "expo-splash-screen": "~0.18.2",
-    "expo-status-bar": "~1.4.4",
-    "expo-updates": "~0.16.4",
-    "i18n-js": "^4.1.1",
-    "lottie-react-native": "5.1.4",
+    "expo": "^49.0.0",
+    "expo-camera": "~13.4.4",
+    "expo-device": "~5.4.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-localization": "~14.3.0",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.19",
+    "i18n-js": "^4.2.0",
+    "lottie-react-native": "5.1.6",
     "native-base": "^3.4.15",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.14",
+    "react-native": "0.72.10",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-paper": "^5.8.0",
-    "react-native-safe-area-context": "4.5.0",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-screen": "^1.0.1",
-    "react-native-screens": "~3.20.0",
+    "react-native-screens": "~3.22.0",
     "react-native-status-bar-height": "^2.6.0",
-    "react-native-svg": "13.4.0",
+    "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.3.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "~0.18.11",
+    "react-native-web": "~0.19.6",
     "react-redux": "^8.0.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "react-native-gesture-handler": "~2.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.27",
+    "@types/react": "~18.2.14",
     "@types/react-native": "~0.69.1",
     "@types/react-native-onboarding-swiper": "^1.1.7",
     "@types/react-native-vector-icons": "^6.4.18",
     "babel-plugin-module-resolver": "^4.1.0",
     "prettier": "^3.1.1",
     "react-native-svg-transformer": "^1.3.0",
-    "typescript": "^4.9.4"
+    "typescript": "^5.1.3"
   },
   "ios": {
     "supportsTablet": true
