--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.10",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-paper": "^5.8.0",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screen": "^1.0.1",
     "react-native-screens": "~3.22.0",
@@ -45,8 +47,7 @@
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.0.2",
-    "redux-persist": "^6.0.0",
-    "react-native-gesture-handler": "~2.12.0"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
