--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native": "0.72.10",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-onboarding-swiper": "^1.2.0",
-    "react-native-paper": "^5.8.0",
+    "react-native-pager-view": "^6.2.3",
+    "react-native-paper": "^5.12.3",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screen": "^1.0.1",
