--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/metro-config": "~0.10.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/netinfo": "9.3.10",
+    "@react-native/js-polyfills": "^0.74.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.0.13",
@@ -34,6 +35,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.10",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-paper": "^5.8.0",
     "react-native-safe-area-context": "4.6.3",
@@ -45,8 +47,7 @@
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.0.2",
-    "redux-persist": "^6.0.0",
-    "react-native-gesture-handler": "~2.12.0"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
