--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@expo/metro-config": "~0.10.0",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-community/netinfo": "9.3.10",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.0.13",
@@ -30,6 +32,7 @@
     "expo-updates": "~0.18.19",
     "i18n-js": "^4.2.0",
     "lottie-react-native": "5.1.6",
+    "moment": "^2.30.1",
     "native-base": "^3.4.15",
     "react": "18.2.0",
     "react-dom": "18.2.0",
