--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native-stack": "^6.9.0",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^1.8.5",
+    "async-mutex": "^0.5.0",
     "expo": "^49.0.0",
     "expo-camera": "~13.4.4",
     "expo-device": "~5.4.0",
@@ -39,7 +40,7 @@
     "react-native": "0.72.10",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-onboarding-swiper": "^1.2.0",
-    "react-native-pager-view": "^6.2.3",
+    "react-native-pager-view": "6.2.0",
     "react-native-paper": "^5.12.3",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
@@ -61,6 +62,7 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "babel-plugin-module-resolver": "^4.1.0",
     "prettier": "^3.1.1",
+    "react-native-dotenv": "^3.4.11",
     "react-native-svg-transformer": "^1.3.0",
     "typescript": "^5.1.3"
   },
