--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screen": "^1.0.1",
     "react-native-screens": "~3.22.0",
+    "react-native-searchable-dropdown-kj": "^1.9.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.3.0",
