--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.19",
+    "formik": "^2.4.5",
     "i18n-js": "^4.2.0",
     "lottie-react-native": "5.1.6",
     "moment": "^2.30.1",
@@ -53,7 +54,8 @@
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.0.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
