refactor: update app name in app.json

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Expo Redux Template",
+    "name": "Homiracle Chủ Nhà",
     "slug": "expo-redux-template",
     "version": "1.1.0",
     "orientation": "portrait",
