--- a/eas.json
+++ b/eas.json
@@ -16,6 +16,13 @@
         "resourceClass": "m-medium"
       }
     },
+    "preview-dev": {
+      "distribution": "internal",
+      "android": {
+        "image": "latest",
+        "buildType": "apk"
+      }
+    },
     "production": {
       "ios": {
         "resourceClass": "m-medium"
